# ranger_mini_sim

./: .gitignore  README.md  readme.md
ranger_mini_control/config/: controller_bed_trolley.yaml  controller_v2_clean.yaml  controller_xray_detector.yaml  controller_xray_source.yaml  pid_gains_bed_trolley.yaml  pid_gains_bed_trolley_stable.yaml  pid_gains_xray_detector.yaml  pid_gains_xray_detector_stable.yaml  pid_gains_xray_source.yaml  pid_gains_xray_source_stable.yaml
ranger_mini_v2/launch/: gazebo.launch
ranger_mini_v2/urdf/: ranger_mini.xacro
ranger_mini_v2_gazebo/: README_SENSORS.md
ranger_mini_v2_gazebo/launch/: bed_trolley_multi.launch  bed_trolley_robot.launch  bed_trolley_teleop.launch  collaborative_xray_simulation.launch  display_bed_trolley.launch  display_xacro.launch  gazebo_bed_table.launch  hospital.launch  hospital_robots.launch  hospital_robots_empty.launch  multi_robot_simulation_delayed.launch  multi_robot_simulation_fixed.launch  multi_robots_visualization.launch  patient_chair_robot.launch  ranger_mini_v2_empty_world_with_rviz.launch  simple_robots_visualization.launch  xray_detector_multi.launch  xray_detector_robot.launch  xray_detector_teleop.launch  xray_source_multi.launch  xray_source_robot.launch  xray_source_teleop.launch
ranger_mini_v2_gazebo/rviz/: bed_trolley.rviz  bed_trolley_robot.rviz  hospital_navigation.rviz  hospital_robots.rviz  lidar_view.rviz  multi_robot_simulation.rviz  ranger_mini_with_sensors.rviz  xray_collaborative_simulation.rviz  xray_detector_robot.rviz  xray_simulation.rviz  xray_source_robot.rviz
ranger_mini_v2_gazebo/scripts/: test_sensors.py
ranger_mini_v2_gazebo/xacro/: accessories.urdf.xacro  accessories_bed.urdf.xacro  accessories_detector.urdf.xacro  accessories_source.urdf.xacro  bed_table.urdf.xacro  bed_table_colored.urdf.xacro  ranger_mini_bed_trolly.xacro  ranger_mini_gazebo.xacro  ranger_mini_patient_chair.xacro  ranger_mini_xray_detector.xacro  ranger_mini_xray_source copy.xacro  ranger_mini_xray_source.xacro  rangerminibedtrolly.xacro
ranger_mini_v2_gazebo/xacro/accessories/: camera_mount.urdf.xacro  camera_mount_detector.urdf.xacro  camera_mount_lidar_top.urdf.xacro  vlp16_mount.urdf.xacro
se2_control/: CMakeLists.txt  README.md  README_SIMPLE_ENCIRCLEMENT.md  nodelet_plugin.xml  package.xml
se2_control/config/: pid_gains.yaml  se2_control_params.yaml  se2_control_visualization.rviz  se2_controller.yaml
se2_control/include/se2_control/: SE2Control.h
se2_control/launch/: bed_trolley_encirclement_mpc.launch  mpc_test.launch  multi_robot_se2_control.launch  range_based_encirclement.launch  range_based_encirclement_no_manual.launch  se2_control.launch  se2_control_simulator.launch  simple_encirclement.launch  single_robot_test.launch  test2d_drone.launch  test_drone_se2.launch  test_se2_control_simple.launch
se2_control/scripts/: auto_encirclement.py  bed_trolley_se2_controller.py  bed_trolley_simple_teleop.py  check_controllers.py  convert_pose.py  drone_test_pose_publisher.py  enhanced_encirclement.py  manual_pose_publisher.py  monitor_drone.py  move_target.py  mpc_controller.py  odom_to_path.py  publish_target_pose.py  range_based_encirclement.py  range_sensor_simulator.py  se2_drone_controller.py  se2_drone_simulator.py  se2_to_vel_converter.py  simple_control_example.py  simple_encirclement.py  so3_target_controller.py  target_commander.py  target_manual_controller.py  test_collision.py  test_encirclement.py  test_improved_encirclement.py  test_keyboard_control.py  test_pose2d_publisher.py  test_range_sensor.py  test_range_system.py  test_se2_commands.py  test_se2_control.py  test_simple_movement.py  three_drone_encirclement.py  xray_detector_se2_controller.py  xray_detector_simple_teleop.py  xray_source_keyboard_teleop.py  xray_source_se2_controller.py  xray_source_simple_teleop.py  xray_source_test_publisher.py
se2_control/src/: SE2Control.cpp  control_example.cpp  se2_control_nodelet.cpp  se2_simulator.cpp
